--- a/index.html
+++ b/index.html
@@ -13,7 +13,50 @@
 </head>
 
 <body>
+    <main class="home-bg">
+        <header class="header container">
+            <img src="./img/image 1.svg" alt="">
+            <nav>
+                <ul class="header-lista">
+                    <li class="header-lista-flex">
+                        <img src="./img/Group 1.svg" alt="">
+                        <a class="f16px" href="#">
+                            Precisa de ajuda?
+                        </a>
+                    </li>
+                    <li class="header-lista-flex">
+                        <img src="./img/Path.svg" alt="">
+                        <a class="f16px" href="#">
+                            Teste gratuitamente
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
 
+        <section class="section container">
+            <div class="section-box1">
+                <h1 class="f48px">
+                    Ferramenta de e-mail marketing perfeita para sua empresa!
+                </h1>
+                <p class="f18px">
+                    Aproveite o potencial do e-mail marketing para ganhar vendas e fortalecer seu relacionamento com clientes.
+                </p>
+                <a class="section-a f16px" href="">
+                    Teste gratuitamente
+                </a>
+                <div class="section-flex">
+                    <a class="f16px" href="">
+                        <img src="./img/Group 40.svg" alt="">
+                        Conheça os recursos
+                    </a>
+                </div>
+            </div>
+            <div class="section-box2">
+                <img src="./img/ilustra.svg" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
