--- a/index.html
+++ b/index.html
@@ -57,6 +57,39 @@
             </div>
         </section>
     </main>
+
+    <section class="menu container">
+        <div class="menu-flex">
+            <h1 class="f32px">
+                Conheça os recursos da ferramenta de e-mail marketing KingHost
+            </h1>
+            <h4 class="f16px">
+                Mais de 5.000 empresas que utilizam ✌️
+            </h4>
+        </div>
+        <div class="menu-flex2">
+            <div class="card">
+                <img src="./img/Group 48.svg" alt="">
+                <h2 class="f18px">Gaste menos</h2>
+                <h4 class="f16px">Aumente o tráfego do seu site e suas vendas utilizando o e-mail marketing.</h4>
+            </div>
+            <div class="card">
+                <img src="./img/Group 49.svg" alt="">
+                <h2 class="f18px">Gaste menos</h2>
+                <h4 class="f16px">Com a ferramenta você faz envios em massa, gastando menos de R$ 0,01 por mensagem!</h4>
+            </div>
+            <div class="card card2">
+                <img src="./img/Group 26.svg" alt="">
+                <h2 class="f18px">Autonomia e resultado</h2>
+                <h4 class="f16px">Crie listas de contatos, campanhas e ainda analise o resultado de cada envio.</h4>
+            </div>
+            <div class="card card3">
+                <img src="./img/Group 47.svg" alt="">
+                <h2 class="f18px">Templates King</h2>
+                <h4 class="f16px">Modelos prontos para cada tipo de e-mail: newsletter, lançamento, campanha de vendas e outros.</h4>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
