--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         </a>
                     </li>
                     <li class="header-lista-flex">
-                        <img src="./img/Path.svg" alt="">
+                        <img src="./img/" alt="">
                         <a class="f16px" href="#">
                             Teste gratuitamente
                         </a>
@@ -78,13 +78,13 @@
                 <h2 class="f18px">Gaste menos</h2>
                 <h4 class="f16px">Com a ferramenta você faz envios em massa, gastando menos de R$ 0,01 por mensagem!</h4>
             </div>
-            <div class="card card2">
-                <img src="./img/Group 26.svg" alt="">
+            <div class="card">
+                <img src="./img/Group 48.svg" alt="">
                 <h2 class="f18px">Autonomia e resultado</h2>
                 <h4 class="f16px">Crie listas de contatos, campanhas e ainda analise o resultado de cada envio.</h4>
             </div>
-            <div class="card card3">
-                <img src="./img/Group 47.svg" alt="">
+            <div class="card">
+                <img src="./img/Group 49.svg" alt="">
                 <h2 class="f18px">Templates King</h2>
                 <h4 class="f16px">Modelos prontos para cada tipo de e-mail: newsletter, lançamento, campanha de vendas e outros.</h4>
             </div>
